@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- phodevi: Add Haswell BMI2 detection
+
 Phoronix Test Suite 4.6.0-Utsira
 
 - phodevi: Report CPU scaling driver along side the CPU scaling governor
